force-app/main/default/objects/Scoring_Condition__c/Scoring_Condition__c.object-meta.xml
<CustomObject>
    <label>Scoring Condition</label>
    <nameField>
        <label>Scoring Condition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scoring Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>