force-app/main/default/objects/Scoring_Condition__c/fields/Scoring_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Scoring_Criteria__c</fullName>
    <label>Scoring Criteria</label>
    <referenceTo>Scoring_Criteria__c</referenceTo>
    <relationshipLabel>Scoring Conditions</relationshipLabel>
    <relationshipName>Scoring_Conditions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>